--- a/style.css
+++ b/style.css
@@ -7,90 +7,101 @@
     --text-color: #a0aec0;
 }
 
-*{
+* {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
     font-family: 'Inter', sans-serif;
 }
 
-li{
+li {
     list-style: none;
+
 }
 
-a{
+a {
     text-decoration: inherit;
     color: inherit;
     border-color: transparent;
 }
 
-header{
+
+header {
     padding: 24px;
 }
 
-/* section */
-.section__name{
+/*
+section
+*/
+.section__name {
     font-weight: 700;
     text-transform: uppercase;
     letter-spacing: 1.6px;
-    color: var(--color-all);
+    color: #6415FF;
+
 }
 
-.section__title{
+.section__title {
     text-align: center;
     font-size: 48px;
     font-weight: 900;
-    color: var(--title);
+    color: #243e63;
     letter-spacing: 1px;
 }
 
-.section__para{
+.section__para {
     color: #7c8ba1;
     font-size: 18px;
     max-width: 600px;
     margin: 0 auto;
     margin-top: 16px;
     line-height: 1.625;
+
 }
 
-.text--color{
-    color: var(--color-all);
+.text--color {
+    color: #6415FF;
 }
 
-.container{
+.container {
     padding: 80px 0;
 }
 
-.row{
+.row {
     width: 100%;
     max-width: 1200px;
     margin: 0 auto;
 }
 
-.section__button{
+.section__button {
     margin-top: 24px;
     padding: 12px 32px;
     border-radius: 9999px;
-    background-color: var(--color-all);
+    background-color: #6415FF;
     transition: all 300ms ease;
     border: none;
     display: block;
     width: fit-content;
+
 }
 
-.section__button--link{
+.section__button--link {
     color: #fff;
     font-weight: 500;
     font-size: 12px;
 }
 
-.section__button:hover{
+.section__button:hover {
     filter: brightness(0.9);
 }
 
-/* nav */
+/* 
 
-.head__nav{
+nav 
+
+*/
+
+.head__nav {
     display: flex;
     margin: 0 auto;
     align-items: center;
@@ -100,51 +111,52 @@ header{
     height: 70px;
 }
 
-.nav__logo{
+.nav__logo {
     display: flex;
     align-items: center;
 }
 
-.nav__title{
+.nav__title {
     font-size: 24px;
     font-weight: 900;
-    color: var(--title);
+    color: #243e63;
     color: inherit;
     text-decoration: inherit;
     transition: all 300ms ease;
     margin-left: 16px;
 }
 
-.nav__logo:hover .nav__title{
-    color: var(--color-all);
+.nav__logo:hover .nav__title {
+    color: #6415FF;
 }
 
-.nav__logo--img{
+.nav__logo--img {
     width: 40px;
     height: 40px;
+
 }
 
-.nav__links{
+.nav__links {
     display: flex;
 }
 
-.nav__link{
+.nav__link {
     font-size: 14px;
-    color: var(--title);
+    color: #243e63;
     margin: 0 24px;
     padding: 0 0 4px;
     font-weight: 700;
 }
 
-.nav__link:hover{
+.nav__link:hover {
     text-decoration: underline 1.5px;
 }
 
-.nav__link--sub:hover{
+.nav__link--sub:hover {
     text-decoration: underline 1.5px;
 }
 
-.nav__link--sub{
+.nav__link--sub {
     font-size: 14px;
     font-weight: 700;
     color: #243e63;
@@ -152,30 +164,31 @@ header{
     padding: 0 0 4px;
 }
 
-.nav__link--primary{
+.nav__link--primary {
     font-size: 14px;
     font-weight: 700;
     color: #fff;
     padding: 12px 32px;
-    background-color: var(--color-all);
+    background-color: #6415FF;
     border-radius: 9999px;
     transition: all 300ms ease;
 }
 
-.nav__link--primary:hover{
+.nav__link--primary:hover {
     filter: brightness(0.9);
 }
 
-.btn__menu{
+.btn__menu {
     background-color: transparent;
     font-size: 40px;
     text-align: center;
     border: none;
-    color: var(--color-all);
+    color: #6415FF;
     display: none;
+
 }
 
-.menu__backdrop{
+.menu__backdrop {
     position: absolute;
     background-color: #f7fafc;
     top: 0;
@@ -193,31 +206,31 @@ header{
     transition: opacity 300ms ease;
 }
 
-.menu--open .menu__backdrop{
+.menu--open .menu__backdrop {
     opacity: 1;
     visibility: visible;
 }
 
-.menu--open{
+.menu--open {
     overflow: hidden;
 }
 
-.btn__menu--close{
+.btn__menu--close {
     position: absolute;
     right: 40px;
     top: 10px;
     padding: 8px;
-    color: var(--color-all);
+    color: #6415FF;
 }
 
-.menu__links{
+.menu__links {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
 }
 
-.menu__link{
+.menu__link {
     margin-top: 0.5rem;
     margin-bottom: 0.5rem;
     border-bottom-width: 2px;
@@ -228,55 +241,59 @@ header{
     letter-spacing: 0.025em;
 }
 
-.menu__list{
+.menu__list {
     padding: 10px;
 }
 
-/* header */
+/* 
 
-.container{
+header  
+
+*/
+.container {
     margin: 0 auto;
     padding: 96px 0;
 }
 
-.head{
+.head {
     display: flex;
     max-height: 100vh;
-    overflow: hidden;
+    overflow: hidden
 }
 
-.header__description{
+.header__description {
     width: 100%;
     display: flex;
     flex-direction: column;
 }
 
-.head__img--wrap{
+.head__img--wrap {
     min-width: 60%;
 }
 
-.head__img{
+.head__img {
     width: 100%;
 }
 
-.head__title{
+.head__title {
     font-size: 48px;
     font-weight: 700;
-    color: var(--title);
+    color: #1a202c;
     line-height: 1.25;
 }
 
-.head__subtitle{
+.head__subtitle {
     margin: 32px 0;
-    color: var(--title);
-    font-size: 1.5;
+    color: #243e63;
+    font-size: 18px;
+    line-height: 1.5;
 }
 
-.head__email--wrap{
+.head__email--wrap {
     max-width: 90%;
 }
 
-.head__email{
+.head__email {
     width: 100%;
     border-radius: 9999px;
     border-width: 2px;
@@ -287,16 +304,16 @@ header{
     border-style: solid;
     border-color: rgb(226, 232, 240);
     transition: all 300ms ease;
-    outline-color: var(--color-all);
+    outline-color: #6415FF;
 }
 
-.head__email--wrap:hover .head__email{
+.head__email--wrap:hover .head__email {
     border-color: rgb(194, 195, 196);
 }
 
-.head__email--button{
+.head__email--buttton {
     border-radius: 9999px;
-    background-color: var(--color-all);
+    background-color: #6415FF;
     color: #fff;
     font-size: 20px;
     border-style: none;
@@ -307,52 +324,51 @@ header{
     margin-top: 20px;
 }
 
-.head__email--button:hover{
+.head__email--buttton:hover {
     filter: brightness(0.9);
 }
 
-.head__customer--wrap{
+.head__customer--wrap {
     max-width: 100%;
 }
 
-.head__customer--wrap{
-    max-width: 100%;
-}
-
-.head__customer--img{
+.head__customer--img {
     width: 100%;
     opacity: 0.5;
     margin-top: 16px;
     padding-right: 20%;
 }
 
-.head__customer--para{
-    color: var(--text-color);
+.head__customer--para {
+    color: #a0aec0;
     font-size: 12px;
     text-transform: uppercase;
     font-weight: 700;
 }
 
-.head__customer{
+.head__customer {
     margin-top: 5vw;
 }
 
-/* features */
+/* 
 
-#features{
+features 
+
+*/
+#features {
     height: 100vh;
 }
 
-.features__head{
+.features__head {
     margin-bottom: 20px;
 }
 
-.features__description{
+.features__description {
     margin: 0 auto;
     text-align: center;
 }
 
-.features__servcies{
+.features__services {
     max-width: 1000px;
     margin: 0 auto;
     display: flex;
@@ -360,152 +376,173 @@ header{
     margin-top: 32px;
 }
 
-.features__service{
+.features__service {
     width: calc(100%/3);
     display: flex;
     padding: 32px 10px;
 }
 
-.features__service--img{
+.features__service--img {
     border-radius: 50%;
     border: solid 1px rgb(226, 232, 240);
     display: block;
-    align-items: center;
+    align-content: center;
     padding: 20px;
 }
 
-.features__text--container{
+.features__text--container {
     margin-left: 16px;
     margin-top: 4px;
 }
 
-.features__text--title{
+.features__text--title {
     font-size: 24px;
     font-weight: 700;
     letter-spacing: 0.5px;
-    color: var(--title);
+    color: #243e63;
 }
 
-.features__text--para{
+.features__text--para {
     font-size: 16px;
     margin-top: 16px;
     font-weight: 500;
     line-height: 1.8;
-    color: var(--text-color);
+    color: #7c8ba1;
 }
 
-/* Quality work */
+/*
 
-#work{
+quality work
+
+*/
+
+#work {
     height: 100vh;
 }
 
-.work__container{
+.work__container {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+
 }
 
-.work__description{
-    max-width: 47%;
-}
-
-.work__title{
+.work__title {
     margin-top: 16px;
     text-align: left;
 }
 
-.work__img--wrap{
-    max-width: 50%;
+.work__description {
+    max-width: 47%;
 }
 
-.work__img{
+.work__img--wrap {
+    MAX-width: 50%;
+}
+
+.work__img {
     width: 100%;
 }
 
-/* Step */
+/* 
 
-.steps__container{
+step 
+
+*/
+.steps__container {
     display: flex;
     flex-direction: row;
 }
 
-.steps__img--wrap{
+.steps__img--wrap {
     max-width: 50%;
     display: flex;
-    flex-direction: row;
+    align-items: center;
 }
 
-.steps__img{
+.steps__img {
     width: 100%;
 }
 
-.steps__path--number{
+.steps__path--number {
     font-size: 36px;
-    color: var(--text-color);
+    color: #cbd5e0;
     font-weight: 600;
 }
 
-.steps__path{
+.steps__path {
     display: flex;
 }
 
-.steps__description{
+.steps__path--text {
+    display: flex;
+    flex-direction: column;
+    margin-left: 16px;
+}
+
+.steps__description {
     max-width: 50%;
     padding-left: 50px;
     display: flex;
     flex-direction: column;
     justify-content: center;
+
 }
 
-.steps__path{
+.steps__path {
     text-align: left;
     margin-top: 20px;
 }
 
-.steps__path--title{
+.steps__path--title {
     font-size: 20px;
     font-weight: 600;
     line-height: 1;
+
 }
 
-.steps__path--paragraph{
+.steps__path--paragraph {
     margin-top: 0.75rem;
     max-width: 20rem;
     font-size: 0.875rem;
     font-weight: 500;
     line-height: 2;
-    color: rgb(113, 128, 150);
+    color: rgb(113 128 150);
 }
 
-/* value */
+/* 
 
-.value__description{
+value 
+
+*/
+
+.value__description {
     max-width: 50%;
     padding-right: 50px;
     display: flex;
     flex-direction: column;
     justify-content: center;
+
 }
 
-.values__reason{
+.values__reasons {
     display: flex;
     justify-content: space-between;
 }
 
-.values__reason{
+.values__reason {
     width: 48%;
 }
 
-.values__reasons--head{
+.values__reasons--head {
     display: flex;
     align-items: center;
     flex-direction: row;
 }
 
 .dollar,
-.briefcase{
+.briefcase {
     border-radius: 999px;
     display: inline-block;
     align-content: center;
@@ -513,56 +550,58 @@ header{
     margin: 10px;
 }
 
-.dollar{
+.dollar {
     padding: 7.5px 12.3px;
     background-color: #9ae6b4;
     color: green;
 }
 
-.briefcase{
+.briefcase {
     padding: 8px 12.3px;
     background-color: #feb2b2;
-    color: rgb(255, 0, 0, 0.738);
+    color: rgba(255, 0, 0, 0.738);
 }
 
-.values__reason--paragraph{
+.values__reason--paragraph {
     margin-top: 1rem;
     text-align: left;
     line-height: 1.625;
-    color: rgb(113, 128, 150);
+    color: rgb(113 128 150);
 }
 
-.values__reason--title{
-
-}
-
-.values__img{
+.values__img {
     width: 100%;
 }
 
-.values__img--wrap{
+.values__img--wrap {
     display: flex;
     align-items: center;
     max-width: 50%;
 }
 
-/* Pricing */
+/* 
 
-.pricing__name{
+pricing
+
+*/
+
+.pricing__name {
     text-align: center;
 }
 
-.pricing__plans{
+.pricing__plans {
     display: flex;
     flex-wrap: wrap;
     max-width: 1200px;
     margin: 0 auto;
     padding-top: 40px;
+    display: flex;
     justify-content: space-between;
+
 }
 
-.pricing__plan{
-    width: calc(98%/3);
+.pricing__plan {
+    width: calc(98% / 3);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -571,8 +610,8 @@ header{
     border-radius: 10px;
 }
 
-.pricing__plan2{
-    width: calc(98%/3);
+.pricing__plan2 {
+    width: calc(98% / 3);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -582,49 +621,53 @@ header{
     background-image: linear-gradient(135deg, rgb(76, 81, 191) 0%, rgb(102, 126, 234) 100%);
 }
 
-.pricing__description{
+.pricing__plan--description {
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+    text-transform: uppercase;
+    line-height: 1.625;
+    text-align: center;
+}
 
-} 
-
-.pricing__plan--title1{
+.pricing__plan--title1 {
     font-size: 1.25rem;
     font-weight: 700;
 }
 
-.pricing__plan--price1{
+.pricing__plan--price1 {
     margin-top: 0.25rem;
     margin-bottom: 0.25rem;
     font-size: 2.25rem;
     font-weight: 700;
 }
 
-.pricing__plan--title2{
+.pricing__plan--title2 {
     font-size: 1.25rem;
     font-weight: 700;
-    color: #fff;
+    color: #fff
 }
 
-.pricing__plan--price2{
+.pricing__plan--price2 {
     margin-top: 0.25rem;
     margin-bottom: 0.25rem;
     font-size: 2.25rem;
     font-weight: 700;
-    color: #fff;
-} 
+    color: #fff
+}
 
-.pricing__plan--text1{
+.pricing__plan--text1 {
     font-weight: 700;
     letter-spacing: 0.1em;
-    color: rgb(160, 174, 192);
-} 
+    color: rgb(160 174 192)
+}
 
-.pricing__plan--text2{
+.pricing__plan--text2 {
     font-weight: 700;
     letter-spacing: 0.1em;
-    color: #fff;
-} 
+    color: #fff
+}
 
-.pricing__plan--top1{
+.pricing__plan--top1 {
     height: 0.5rem;
     background: linear-gradient(115deg, rgb(56, 178, 172) 0%, rgb(129, 230, 217) 100%);
     width: 100%;
@@ -632,14 +675,14 @@ header{
     border-top-right-radius: 10px;
 }
 
-.pricing__plan--top2{
+.pricing__plan--top2 {
     height: 0.5rem;
     width: 100%;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
 }
 
-.pricing__plan--top3{
+.pricing__plan--top3 {
     height: 0.5rem;
     background: linear-gradient(115deg, rgb(245, 101, 101) 0%, rgb(254, 178, 178) 100%);
     width: 100%;
@@ -647,7 +690,7 @@ header{
     border-top-right-radius: 10px;
 }
 
-.pricing__plan--benefits{
+.pricing__plan--benefits {
     border-bottom: solid 2px rgb(226, 232, 240);
     border-top: solid 2px rgb(226, 232, 240);
     width: 100%;
@@ -656,32 +699,32 @@ header{
     text-align: center;
 }
 
-.pricing__plan--subtitle1{
+.pricing__plan--subtitle1 {
     padding-top: 32px;
 }
 
-.pricing__plan--subtitle2{
+.pricing__plan--subtitle2 {
     padding-top: 32px;
     color: #fff;
 }
 
-.pricing__plan--benefit{
+.pricing__plan--benefit {
     margin-top: 1.25rem;
     font-weight: 500;
-    color: rgb(160, 174, 192);
+    color: rgb(160 174 192);
 }
 
-.pricing__plan--benefits2{
+.pricing__plan--benefit2 {
     margin-top: 1.25rem;
     font-weight: 500;
     color: #fff;
 }
 
-.pricing__plan--list{
+.pricing__plan--list {
     padding-bottom: 32px;
 }
 
-.pricing__plan--button{
+.pricing__plan--button {
     border-radius: 9999px;
     padding-top: 1rem;
     padding-bottom: 1rem;
@@ -693,7 +736,7 @@ header{
     background: linear-gradient(115deg, rgb(56, 178, 172) 0%, rgb(129, 230, 217) 100%);
 }
 
-.pricing__plan--button2{
+.pricing__plan--button2 {
     border-radius: 9999px;
     padding-top: 1rem;
     padding-bottom: 1rem;
@@ -702,38 +745,41 @@ header{
     letter-spacing: 0.05em;
     padding: 16px 32px;
     border: none;
-    background: #fff;
+    background: #fff
 }
 
-.pricing__plan--button3{
+.pricing__plan--button3 {
     border-radius: 9999px;
     padding-top: 1rem;
     padding-bottom: 1rem;
     font-size: 0.875rem;
     text-transform: uppercase;
-    letter-spacing: 0.005em;
+    letter-spacing: 0.05em;
     padding: 16px 32px;
     border: none;
     background: linear-gradient(115deg, rgb(245, 101, 101) 0%, rgb(254, 178, 178) 100%);
 }
 
-.pricing__plan--links{
+.pricing__plan--links {
     padding: 20px 16px;
 }
 
-.pricing__plan--link{
+.pricing__plan--link {
     color: #f7fafc;
     font-size: 14px;
 }
 
-.pricing__plan--link2{
-    color: var(--color-all);
+.pricing__plan--link2 {
+    color: #6415FF;
     font-size: 14px;
-} 
+}
 
+/* 
 
-/* footer */
-/* footer {
+footer
+
+*/
+footer {
     background-color: #6415FF;
     height: 50vh;
     padding: 50px;
@@ -807,12 +853,20 @@ header{
     padding: 8px;
     font-size: 20px;
     color: #fff;
-} */
+}
 
 
-/* media queries */
+/* 
+
+media queries
+
+*/
 
 @media (max-width: 992px) {
+
+
+
+
 
     .container {
         padding: 50px 0;
@@ -867,7 +921,11 @@ header{
         width: 100%;
     }
 
-    /* featues */
+    /*
+    
+    featues
+    
+    */
     .features__service {
         width: 50%;
     }
@@ -880,7 +938,11 @@ header{
         height: fit-content;
     }
 
-    /* plans */
+    /* 
+
+    plans
+
+    */
     .pricing__plans {
         display: flex;
         flex-direction: column;
@@ -908,7 +970,11 @@ header{
     }
 
 
-    /* features */
+    /*
+
+features
+
+*/
 
     .features__service {
         width: 100%;
@@ -916,7 +982,11 @@ header{
 
 
 
-    /* quality-work */
+    /* 
+
+    quality-work
+    
+    */
 
 
     #work {
@@ -951,7 +1021,11 @@ header{
         margin-top: 20px;
     }
 
-    /* STEPS */
+    /*
+
+    STEPS
+
+    */
     #steps {
         height: fit-content;
     }
@@ -991,7 +1065,11 @@ header{
         text-align: center;
     }
 
-    /* values */
+    /*
+    
+    values
+
+    */
     #values {
         height: fit-content;
     }
@@ -1024,7 +1102,11 @@ header{
         margin-bottom: 20px;
     }
 
-    /* footer */
+    /*
+
+    footer
+
+    */
 
     footer {
         height: fit-content;
